--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,13 @@
     <string name="app_name">javahack</string>
     <string name="shared_preferences">ru.hardcoders.shared_preferences</string>
     <string name="title_activity_login">Войти</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
+    <string name="action_sign_in">Войти</string>
+    <string name="action_sign_in_short">Войти</string>
     <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
+    <string name="invalid_username">Не валидный номер телефона</string>
+    <string name="invalid_password">Пароль должен быть не короче 8 символов</string>
+    <string name="login_failed">"Произошла ошибка при попытке авторизации"</string>
+    <string name="welcome_text">Рады вас видеть!</string>
+    <string name="phone_hint">Номер телефона</string>
+    <string name="password_hint">Пароль</string>
 </resources>
