--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="action_capture">Распознать</string>
     <string name="action_accept">Подтвердить</string>
     <string name="action_sign_in_short">Войти</string>
+    <string name="action_next">Далее</string>
+    <string name="action_finish">Готово</string>
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Не валидный номер телефона</string>
     <string name="invalid_password">Пароль должен быть не короче 8 символов</string>
