--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="welcome_text">Рады вас видеть!</string>
     <string name="phone_hint">Номер телефона</string>
     <string name="password_hint">Пароль</string>
+    <string name="loading">Загрузка...</string>
 </resources>
